tdf#112848 Assert when clicking on report wizard or design view

the StartListening call here is unnecessary because OSectionView
inherits from SdrMarkView which calls StartListening unconditionally in
it's constructor.

Change-Id: I0191fce12e0600cc8fc6b9cc20e7e3bf39b386d3